objects/warranty__c.object
<CustomObject>
    <fields>
        <fullName>Coverage_Details__c</fullName>
        <description>What aries included</description>
        <label>Coverage Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner</description>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>warranties</relationshipLabel>
        <relationshipName>warranties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Coverage end</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Coverage start</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty_Type__c</fullName>
        <label>Warranty Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Extended</fullName>
                </value>
                <value>
                    <fullName>Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Powertrain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>warranty</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>warranty Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>warranties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>